# harmonies-ai

./: pyproject.toml
harmonies_ai/: cards.py  game_state.py  grid.py  rich_canvas.py  tokens.py
harmonies_ai/ai/: greedy.py  random.py  runner.py
tests/: test_score.py
