[project]
name = "harmonies-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "David Moody",email = "david@davidxmoody.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython (>=9.3.0,<10.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
